[tool.poetry]
name = "hw-4"
version = "0.1.0"
description = ""
authors = ["MONSMIN <99141331+MONSMIN@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hw_4"}]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
